# Nexus-AI-Agent

./: .gitignore  config.py  main.py  pyproject.toml  test_phase00.py  test_phase01.py  test_phase02.py  test_phase03.py  test_phase04.py  test_phase05.py  test_phase06.py
agents/: __init__.py  base.py  coder.py  debugger.py  planner.py
data/: memory.db  test_output.txt
data/indexes/: default.faiss  default.meta.pkl  default.mtimes.json  memory.faiss  memory.meta.json  nexus.faiss  nexus.meta.pkl  nexus.mtimes.json  nexus_eval.faiss  nexus_eval.meta.pkl  nexus_eval.mtimes.json  nexus_test.faiss  nexus_test.meta.pkl  nexus_test.mtimes.json  test_proj.faiss  test_proj.meta.pkl  test_proj.mtimes.json
evals/: eval_suite.py  results.json
llm/: client.py  prompts.py  router.py
memory/: memory_store.py
orchestrator/: agent_loop.py
rag/: indexer.py  retriever.py
tools/: base.py  file_tool.py  git_tool.py  python_exec.py  terminal_tool.py
